--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
     </header>
     <main><section><h1>MY PROJECTS</h1>
-        <div class="projects">
+        <div class="projects" id="projects">
          <div class="oneproject">
             <div class="theimage"><img src="lupgasmaller.webp" width="500" height="250" alt="LUGPA hero image" title="Lugpa hero image a photo of the chicago bean"></div>
             <div class="theinfo"><h2 class="projecttitle">LUGPA ANNUAL REPORTS WEBSITE</h2>
